prevent scrollbar to jump content

--- a/src/global.css
+++ b/src/global.css
@@ -5,6 +5,7 @@ body {
     color: #061c23; /* 3a3a3a */
     background-color: #f3f3f5;    
     font-family: "Georgia";
+    scrollbar-gutter: stable;
 }
 
 .day-night {
